
2007-09-05 Jens Klein <jens@bluedynamics.com> and 
           Robert Niederreiter <robertnqbluedynamics.com>

	* change the handling of skins directories and its registration.
	generate/ use GS-profile for skin registration. use directory
	structure like in DIYPloneStyle as default. keep BBB. make it
	configureable. see documentation of tgv skin_registration and 
	skin_directories.
	* change the type registration: use a GS-profile.
	* removed all references to CMFMember, it will no longer work with 
	Plone >=2.5
	* marked some parts for the portlet-support as outdated. 

2007-08-20  Maurits van Rees  <maurits@vanrees.org>

	* src/archgenxml/WorkflowGenerator.py
	(WorkflowGenerator.generateWorkflows): Only write out the
	rolemap.xml when we have extra roles to define there.  Might need
	to be done in the template itself with a dtml-if or something.
	This might fix http://plone.org/products/archgenxml/issues/135
	
2007-08-08  Reinout van Rees  <reinout@zestsoftware.nl>

	* setup.py: Making it a 1.6 beta 1.

2007-08-06  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/WorkflowGenerator.py: Switched over to generic
	setup workflow generation. The old files (in Extensions/*) have
	been removed, everything is now in profiles/default.

2007-08-01  Maurits van Rees  <m.van.rees@zestsoftware.nl>

	* src/archgenxml/zopeimportfixer.py (prepareZopeImport): Add
	descriptive error message when we cannot import zope.component but
	_can_ import zope itself due to a messed up PYTHONPATH.

2007-07-19  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/ArchetypesGenerator.py: Added <<atfile>>,
	<<atevent>> and <<atdocument>> stereotypes in addition to the
	already existing <<atfolder>>.

2007-05-30  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/zopeimportfixer.py: Moved the zope import fixer
	and the logfile initializer to separate modules to clean up
	utils.py. (utils.py can now import zope stuff, too).

	* various files: Cleanup.
